# Pantheon

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  create.sh  index.html  login.sh  package-lock.json  package.json  tailwind.config.js
include/: database.hpp  env.h  models.hpp  server.hpp  statement.hpp
include/handlers/: base.hpp  event.hpp  interface.hpp  user.hpp
include/models/: event.hpp  user.hpp
include/repositories/: base.hpp  event.hpp  user.hpp
include/routes/: auth.hpp  base.hpp  genesis.hpp
migrations/: CreateTblAdmin.sql  CreateTblEvent.sql  CreateTblEventImages.sql  CreateTblEventOrganisor.sql  CreateTblOrganisor.sql  CreateTblUser.sql
src/: App.tsx  database.cc  index.css  main.cc  main.tsx  models.cc  server.cc  statement.cc
src/components/: ActivityCard.tsx  AdminPanel.tsx  BinaryBackground.tsx  Events.tsx  Footer.tsx  HighlightsCard.tsx  IncomingPoster.tsx  Main.tsx  Nav.tsx  PastActivityCard.tsx  PastEventsData.ts  SubmissionForm.tsx  TimelineEvent.tsx  UpcomingEventCard.tsx  UpcomingEvents.tsx  UpcomingEventsData.ts  app-sidebar.tsx  layout.tsx  nav-user.tsx
src/components/magicui/: hyper-text.tsx
src/handlers/: base.cc  event.cc  user.cc
src/lib/: LinksEnum.ts
src/pages/: Admin.tsx  Home.tsx  Incoming-events.tsx  Login.tsx  PastEvents.tsx  Splash-Screen.tsx
src/repositories/: user.cc
src/routes/: auth.cc  genesis.cc
tests/: main_test.cc  server.cc  user_handlers.cc
